@@ -1,12 +1,12 @@
 package fontys.magiccardgame.business;
 
+import fontys.magiccardgame.business.converters.UserConverter;
 import fontys.magiccardgame.business.dto.CreateUserRequest;
 import fontys.magiccardgame.business.dto.GetAllUsersResponse;
 import fontys.magiccardgame.business.dto.UpdateUserRequest;
 import fontys.magiccardgame.business.exception.UsernameAlreadyExistsException;
 import fontys.magiccardgame.configuration.security.token.AccessToken;
 import fontys.magiccardgame.configuration.security.token.exception.UnauthorizedDataAccessException;
-import fontys.magiccardgame.configuration.security.token.impl.AccessTokenImpl;
 import fontys.magiccardgame.domain.User;
 import fontys.magiccardgame.persistence.CardRepository;
 import fontys.magiccardgame.persistence.PlayerRepository;
@@ -15,13 +15,11 @@ import fontys.magiccardgame.persistence.entity.*;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -33,14 +31,12 @@ public class UserService {
     private CardRepository cardRepository;
     private PlayerRepository playerRepository;
     private AccessToken requestAccessToken;
-
-    DefaultCardsService defaultCardsService;
+    static final String UNAUTHORISED_EXCEPTION_MESSAGE = "USER_ID_NOT_FROM_LOGGED_IN_USER";
+    DefaultCards defaultCards;
 
     public Optional<User> getUser(Long id) {
-        if (!requestAccessToken.hasRole(RoleEnum.ADMIN.name())) {
-            if (!requestAccessToken.getUserId().equals(id)) {
-                throw new UnauthorizedDataAccessException("USER_ID_NOT_FROM_LOGGED_IN_USER");
-            }
+        if (!requestAccessToken.hasRole(RoleEnum.ADMIN.name()) && !requestAccessToken.getUserId().equals(id)) {
+            throw new UnauthorizedDataAccessException(UNAUTHORISED_EXCEPTION_MESSAGE);
         }
         return userRepo.findById(id).map(UserConverter::convert);
     }
@@ -50,7 +46,7 @@ public class UserService {
             throw new UnauthorizedDataAccessException("ADMIN_PERMISSION_MANDATORY");
         }
         return GetAllUsersResponse.builder()
-                .users(userRepo.findAll().stream().map(UserConverter::convert).collect(Collectors.toList())).build();
+                .users(userRepo.findAll().stream().map(UserConverter::convert).toList()).build();
     }
 
     @Transactional
@@ -71,14 +67,12 @@ public class UserService {
         if (userRepo.findByUsername(request.getUsername()) != null) {
             throw new UsernameAlreadyExistsException();
         }
-        UserEntity newAdminEntity = generateAdminEntity(request);
+        generateAdminEntity(request);
     }
 
     public void updateUser(UpdateUserRequest request) {
-        if (!requestAccessToken.hasRole(RoleEnum.ADMIN.name())) {
-            if (!requestAccessToken.getUserId().equals(request.getId()))  {
-                throw new UnauthorizedDataAccessException("USER_ID_NOT_FROM_LOGGED_IN_USER");
-            }
+        if (!requestAccessToken.hasRole(RoleEnum.ADMIN.name()) && !requestAccessToken.getUserId().equals(request.getId())) {
+            throw new UnauthorizedDataAccessException(UNAUTHORISED_EXCEPTION_MESSAGE);
         }
         UserEntity user = userRepo.findById(request.getId())
                 .orElseThrow(() -> new EntityNotFoundException("User not found for ID: " + request.getId()));
@@ -89,10 +83,8 @@ public class UserService {
     }
 
     public void deleteUser(Long id) {
-        if (!requestAccessToken.hasRole(RoleEnum.ADMIN.name())) {
-            if (!requestAccessToken.getUserId().equals(id)) {
-                throw new UnauthorizedDataAccessException("USER_ID_NOT_FROM_LOGGED_IN_USER");
-            }
+        if (!requestAccessToken.hasRole(RoleEnum.ADMIN.name()) && !requestAccessToken.getUserId().equals(id)) {
+                throw new UnauthorizedDataAccessException(UNAUTHORISED_EXCEPTION_MESSAGE);
         }
         userRepo.deleteById(id);
     }
@@ -101,13 +93,13 @@ public class UserService {
     // private helper methods
     private void saveNewPlayer(UserEntity user) {
 
-        List<Long> defaultCardIds = defaultCardsService.getDefaultCardIds();
-        List<CardEntity> defaultCards = cardRepository.findAllById(defaultCardIds);
+        List<Long> defaultCardIds = defaultCards.getDefaultCardIds();
+        List<CardEntity> defaultCardsCollection = cardRepository.findAllById(defaultCardIds);
 
         PlayerEntity newPlayer = PlayerEntity.builder()
                 .name("player" + user.getId())
                 .user(user)
-                .ownedCards(defaultCards)
+                .ownedCards(defaultCardsCollection)
                 .deck(new DeckEntity())
                 .build();
         playerRepository.save(newPlayer);
